--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,20 @@
 plugins {
-    id 'com.android.application'
-    id 'org.jetbrains.kotlin.android'
-    id 'dagger.hilt.android.plugin'
-    id 'kotlin-kapt'
+    id("com.android.application")
+    id("org.jetbrains.kotlin.android")
+    id("dagger.hilt.android.plugin")
+    id("kotlin-kapt")
+    id("org.jlleitschuh.gradle.ktlint") version "11.0.0"
+}
+
+ktlint {
+    android = true
+    ignoreFailures = false
+    disabledRules = ["final-newline", "no-wildcard-imports"]
+    reporters {
+        reporter "plain"
+        reporter "checkstyle"
+        reporter "sarif"
+    }
 }
 
 android {
@@ -49,11 +61,11 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_11
-        targetCompatibility JavaVersion.VERSION_11
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
     kotlinOptions {
-        jvmTarget = '11'
+        jvmTarget = '17'
     }
     buildFeatures {
         compose true
@@ -116,8 +128,12 @@ dependencies {
 
     // Navigation
     implementation "androidx.navigation:navigation-compose:2.5.3"
+
+    implementation("androidx.palette:palette:1.0.0")
 }
 
 kapt {
     correctErrorTypes true
 }
+
+tasks.getByPath("preBuild").dependsOn("ktlintFormat")
