--- a/app/build.gradle
+++ b/app/build.gradle
@@ -96,8 +96,8 @@ dependencies {
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_ui_version"
 
     // Coil
-    implementation "io.coil-kt:coil:2.2.2"
-    implementation "io.coil-kt:coil-compose:2.2.2"
+    implementation("io.coil-kt:coil:2.3.0")
+    implementation("io.coil-kt:coil-compose:2.3.0")
 
     // Retrofit
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
@@ -124,7 +124,8 @@ dependencies {
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt "com.google.dagger:hilt-compiler:$hilt_version"
 
-    implementation "com.google.accompanist:accompanist-drawablepainter:0.25.1"
+    // A library which provides a way to use Android drawables as Jetpack Compose Painters.
+    implementation "com.google.accompanist:accompanist-drawablepainter:0.30.0"
 
     // Navigation
     implementation "androidx.navigation:navigation-compose:2.5.3"
